--- a/cart-service/package.json
+++ b/cart-service/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc --watch",
     "start:dev": "concurrently --kill-others-on-fail \"npm run build\" \"npm run start\""
