--- a/cart-service/package.json
+++ b/cart-service/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc --watch",
+    "build": "tsc",
     "start:dev": "concurrently --kill-others-on-fail \"npm run build\" \"npm run start\""
   },
   "keywords": [],
