fix:build issue with the docker file in auth-sevice

--- a/.github/workflows/auth-service-workflow.yaml
+++ b/.github/workflows/auth-service-workflow.yaml
@@ -3,7 +3,7 @@ name: Build & Publish auth service Docker Image
 on:
   push:
     branches:
-      - main
+      - ['main']
     paths:
       - 'auth-service/**'
 
