fix:build issue with the docker file in auth-sevice

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,5 +1,4 @@
-
-FROM node:alpine
+FROM node:18-alpine
 
 WORKDIR /app
 
@@ -9,7 +8,7 @@ RUN npm install
 
 COPY . .
 
-RUN npm build
+RUN npm run build
 
 EXPOSE 8001
 
