--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.6.3",
-    "nodemon": "^3.1.6"
+    "nodemon": "^3.1.6",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
