--- a/admin-service/package.json
+++ b/admin-service/package.json
@@ -21,7 +21,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
