--- a/cart-service/dockerfile
+++ b/cart-service/dockerfile
@@ -1,7 +1,7 @@
 
-FROM node:18
+FROM node:18-alpine
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 COPY package*.json ./
 
@@ -13,4 +13,4 @@ RUN npm run build
 
 EXPOSE 8004
 
-CMD ["npm", "run", "start"]
+CMD ["npm",  "start"]
