--- a/cart-service/package.json
+++ b/cart-service/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.0",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
