--- a/product-service/package.json
+++ b/product-service/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.6.3",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
